--- a/services/stats/web_stats/stylesheets/c3.css
+++ b/services/stats/web_stats/stylesheets/c3.css
@@ -57,6 +57,7 @@
 
 /*-- Bar --*/
 .c3-bar {
+  padding: 20px 50px;
   stroke-width: 0; }
 
 .c3-bar._expanded_ {
@@ -165,3 +166,74 @@
 .c3-chart-arc .c3-gauge-value {
   fill: #000;
   /*  font-size: 28px !important;*/ }
+
+
+.vertical-menu {
+  text-align: center;
+  padding-top: 5%;
+  width:15%;
+  float: left;
+  width: 200px;
+}
+
+.vertical-menu a {
+  color: black;
+  display: block;
+  padding: 12px;
+  text-decoration: none;
+}
+
+.vertical-menu a:hover {
+  color: #0080FF;
+  background-color: #0CF4FC;
+}
+
+.vertical-menu a.active {
+  color: #0080FF;
+}
+
+.container{
+  text-align: center;
+  margin-left: 2%;
+  width:70%;
+  margin-right:2%;
+  float: left;
+}
+
+#title{
+  font-family: 'Times New Roman', serif;
+  text-align: center;
+  font-size: 20px;
+  color: #7F0606;
+}
+
+.card-body {
+  display: flex;
+}
+
+.col {
+  padding: 8px;
+}
+
+.border-line {
+  height: 495px;
+  border-right: 1px solid #000;
+}
+
+.port{
+  margin-left: 17%;
+}
+
+.pie, .pie_int{
+  margin-left: 47%;
+}
+
+.lol{
+  margin-left: 45%;
+}
+
+body{
+  background-image: url('../images/bg5.jpg');
+  background-size: cover;
+  background-repeat: no-repeat;
+}
