--- a/services/stats/web_stats/stylesheets/c3.css
+++ b/services/stats/web_stats/stylesheets/c3.css
@@ -202,7 +202,7 @@
 }
 
 #title{
-  font-family: Copperplate,Copperplate Gothic Light,fantasy; 
+  /*font-family: Copperplate,Copperplate Gothic Light,fantasy;*/ 
   text-align: center;
   font-size: 20px;
   color: #7F0606;
